# ldcast

./: .gitignore  CLAUDE.md  README.md  journal.md  log.md  pyproject.toml  research-growth-decay-nowcasting.md  retrain.md
.claude/: settings.local.json
.claude/skills/analyze/: SKILL.md  analyze_training.py
config/: train_rust.yaml
ldcast/: forecast.py
ldcast/features/: rust_data.py
ldcast/models/autoenc/: autoenc.py  monitor.py  training.py
ldcast/models/diffusion/: diffusion.py  dpm_solver.py  uni_pc.py  utils.py
ldcast/models/genforecast/: monitor.py  training.py
ldcast/models/nowcast/: prob_nowcast.py
ldcast/visualization/: dgmr_colors.py
scripts/: diag_case.py  diag_genesis.py  eval_aalborg_ab.py  eval_autoenc_ceiling.py  eval_genforecast.py  eval_growth_decay.py  eval_persistence_baseline.py  eval_pod_far.py  eval_prob_ctx3.py  eval_prob_ctx_ab.py  eval_prob_interior.py  eval_steps_baseline.py  eval_val_large.py  forecast_demo.py  panel_ctx.py  panel_ctx3.py  panel_growth_decay.py  panel_with_steps.py  plot_aalborg_ab.py  plot_ctx3.py  plot_ctx_ab.py  plot_growth_decay.py  plot_side_by_side.py  plot_skill_comparison.py  pop_map.py  predict_rust.py  recalibrate_pop.py  steps_extract_cases.py  train_autoenc.py  train_autoenc_rust.py  train_genforecast.py  train_genforecast_rust.py  train_prob_nowcaster_rust.py  train_rust.py
