[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ldcast"
version = "0.0.1"
description = "Latent diffusion for generative precipitation nowcasting"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Jussi Leinonen" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dask",
    "fire",
    "einops",
    "h5py",
    "matplotlib",
    "netCDF4",
    "numba",
    "numpy",
    "omegaconf",
    "pyshp",
    "pytorch-lightning",
    "scipy",
    "torch",
    "tqdm",
]

[project.optional-dependencies]
benchmarks = ["tensorflow", "pysteps"]
low-vram = ["bitsandbytes"]   # enables --optimizer_8bit for diffusion training

[project.urls]
Homepage = "https://github.com/MeteoSwiss/ldcast"

[tool.setuptools.packages.find]
include = ["ldcast*"]
